Fix header on small screens

--- a/style.css
+++ b/style.css
@@ -38,17 +38,18 @@ button {
 .container {
 	max-width: 1000px;
 	margin-inline: auto;
+	padding-inline: 1.5rem;
 }
 
 .section {
-	padding: 48px 24px;
+	padding-block: 48px;
 }
 
 /* ---- Header ---- */
 
 .header {
 	background-color: #1f2937;
-	padding: 24px;
+	padding-block: 20px;
 	position: sticky;
 	top: 0;
 	z-index: 100;
@@ -57,7 +58,16 @@ button {
 
 .header .container {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
+	gap: 20px;
+}
+
+@media only screen and (min-width: 600px) {
+	.header .container {
+		flex-direction: row;
+		justify-content: space-between;
+	}
 }
 
 .logo {
@@ -66,7 +76,6 @@ button {
 }
 
 .links {
-	margin-left: auto;
 	display: flex;
 	gap: 24px;
 }
